--- a/all games/snake/index.html
+++ b/all games/snake/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Basic Snake HTML Game</title>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
