--- a/index.html
+++ b/index.html
@@ -5,5 +5,30 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <table>
+      <tr>
+        <td>
+          <button><a href="/all games/snake/index.html">Snake Game</a></button>
+        </td>
+        <td>
+          <button>
+            <a href="/all games/band/index.html">Feel the beats</a>
+          </button>
+        </td>
+      </tr>
+
+      <tr>
+        <td>
+          <button>
+            <a href="/all games/dice/index.html">Roll the dies</a>
+          </button>
+        </td>
+
+        <td>
+          <button><a href="/all games/simon/index.html">Simon game</a></button>
+        </td>
+      </tr>
+    </table>
+  </body>
 </html>
