--- a/index.html
+++ b/index.html
@@ -6,29 +6,45 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <table>
-      <tr>
-        <td>
-          <button><a href="/all games/snake/index.html">Snake Game</a></button>
-        </td>
-        <td>
-          <button>
-            <a href="/all games/band/index.html">Feel the beats</a>
-          </button>
-        </td>
-      </tr>
+    <h1 class="head">GAMES ARENA</h1>
 
-      <tr>
-        <td>
-          <button>
-            <a href="/all games/dice/index.html">Roll the dies</a>
-          </button>
-        </td>
+    <div class="main">
+      <div class="first">
+        <a href="/all games/snake/index.html">
+          <img
+            class="snake-css"
+            src="all games/snake/snake-removebg-preview.png"
+          />
+        </a>
+      </div>
+      <div class="second">
+        <a href="/all games/band/index.html"
+          ><img
+            class="drum"
+            src="./all games/band/images/drumlogo.png"
+            alt="drumlogo"
+        /></a>
+      </div>
 
-        <td>
-          <button><a href="/all games/simon/index.html">Simon game</a></button>
-        </td>
-      </tr>
-    </table>
+      <div class="third">
+        <a href="/all games/dice/index.html">
+          <img
+            class="dice"
+            src="./all games/dice/images/logo2.png"
+            alt="dicelogo"
+          />
+        </a>
+      </div>
+
+      <div class="fourth">
+        <a href="/all games/simon/index.html">
+          <img
+            class="simon"
+            src="./all games/simon/images/simonlogo.png"
+            alt="simonlogo"
+          />
+        </a>
+      </div>
+    </div>
   </body>
 </html>
